--- a/src/editor/Editor/mainwindow.ui
+++ b/src/editor/Editor/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1065</width>
-    <height>664</height>
+    <height>609</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -71,7 +71,7 @@
      <widget class="QScrollArea" name="scrollArea">
       <property name="minimumSize">
        <size>
-        <width>200</width>
+        <width>250</width>
         <height>200</height>
        </size>
       </property>
@@ -88,9 +88,9 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>0</y>
-         <width>248</width>
-         <height>553</height>
+         <y>-30</y>
+         <width>235</width>
+         <height>528</height>
         </rect>
        </property>
        <layout class="QFormLayout" name="formLayout">
@@ -395,6 +395,32 @@
           </property>
          </widget>
         </item>
+        <item row="20" column="0" colspan="2">
+         <widget class="Line" name="line_3">
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="21" column="0">
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>10</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
        </layout>
       </widget>
      </widget>
@@ -418,9 +444,11 @@
    </widget>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>Background</string>
+     <string>Fondo</string>
     </property>
-    <addaction name="actionOpen_2"/>
+    <addaction name="actionLejano"/>
+    <addaction name="actionMedio"/>
+    <addaction name="actionCercano"/>
    </widget>
    <addaction name="menuEditor"/>
    <addaction name="menuFile"/>
@@ -498,9 +526,19 @@
     <string>S</string>
    </property>
   </action>
-  <action name="actionOpen_2">
+  <action name="actionLejano">
    <property name="text">
-    <string>Open</string>
+    <string>Lejano</string>
+   </property>
+  </action>
+  <action name="actionMedio">
+   <property name="text">
+    <string>Medio</string>
+   </property>
+  </action>
+  <action name="actionCercano">
+   <property name="text">
+    <string>Cercano</string>
    </property>
   </action>
  </widget>
