editor: implemented background color selection

--- a/src/editor/Editor/mainwindow.ui
+++ b/src/editor/Editor/mainwindow.ui
@@ -68,7 +68,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QScrollArea" name="scrollArea">
+     <widget class="QScrollArea" name="stageParams">
       <property name="minimumSize">
        <size>
         <width>250</width>
@@ -88,9 +88,9 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>-30</y>
+         <y>-86</y>
          <width>235</width>
-         <height>528</height>
+         <height>584</height>
         </rect>
        </property>
        <layout class="QFormLayout" name="formLayout">
@@ -409,7 +409,7 @@
          </widget>
         </item>
         <item row="21" column="0">
-         <spacer name="verticalSpacer_3">
+         <spacer name="verticalSpacer_4">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
@@ -420,6 +420,23 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="22" column="0" colspan="2">
+         <widget class="QLabel" name="label_16">
+          <property name="text">
+           <string>&lt;b&gt;Fondo&lt;/b&gt;</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="23" column="0">
+         <widget class="QPushButton" name="bgColorButton">
+          <property name="text">
+           <string>Color</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
