--- a/src/editor/Editor/mainwindow.ui
+++ b/src/editor/Editor/mainwindow.ui
@@ -42,7 +42,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>-86</y>
+         <y>0</y>
          <width>235</width>
          <height>584</height>
         </rect>
@@ -84,7 +84,7 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QSpinBox" name="spinBox">
+         <widget class="QSpinBox" name="wormsHP">
           <property name="maximum">
            <number>250</number>
           </property>
